Update IcM library to pull from Nuget. Modify work item creation to set overrides BEFORE creating the item.

--- a/Mail2Bug/packages.config
+++ b/Mail2Bug/packages.config
@@ -2,19 +2,23 @@
 <packages>
   <package id="Bond.Core.NET" version="3.0.48" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.Applications.Telemetry.Server" version="1.1.184" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AzureAd.Icm.Types.amd64" version="1.0.290.1" targetFramework="net45" />
+  <package id="Microsoft.AzureAd.Icm.WebService.Client.amd64" version="1.0.290.1" targetFramework="net45" />
+  <package id="Microsoft.AzureAd.Icm.XhtmlUtility.amd64" version="1.0.290.1" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Exchange.WebServices" version="1.2" targetFramework="net45" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.16.204221202" targetFramework="net45" />
   <package id="Microsoft.TestApi" version="0.6.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
-  <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net45" />
-  <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.100.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.100.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.100.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.100.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
 </packages>
